--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<header>
 		<ul>
-			<li> <a href="#parallax"> Mad Turkey </a></li>
+			<li> <a href="http://www.nknu.edu.tw/~idea/2015exhibition/MadTurkey/final.html"> Mad Turkey </a></li>
 			<li> <a href="#aboutUs"> About Us </a></li>
 			<li> <a href="#poster"> Poster </a></li>
 			<li> <a href="#video"> Video </a></li>
